2005-11-07  Derek Price  <derek@ximbiot.com>

	* edit.c (watch_onoff): Remove unneeded proto.

2005-11-03  Derek Price  <derek@ximbiot.com>

	* sanity.sh (compression): Elucidate.

2005-10-28  Derek Price  <derek@ximbiot.com>

	* commit.c (check_fileproc): Don't print conflict marker warning in
	really quiet mode.

	* sanity.sh (rcslib): Rename some misnamed tests.

	[bug #14840]
	* sanity.sh (compression): New test for problem fixed below.

	[bug #14840]
	* zlib.c (compress_bufer_input): Don't assume the number of bytes the
	caller requested will be available from the stream underlying the
	compression buffer - the data is compressed and should be shorter by
	definition.  Improve comment.
	(Original report from Rahul Bhargava <rahul@wandisco.com>.)

2005-10-18  Derek Price  <derek@ximbiot.com>

	Include "wait.h" only as needed.
	* cvs.h: Remove #include of "wait.h".
	* run.c, server.c: Add #include "wait.h".

2005-10-16  Brian Murphy  <brian@murphy.dk>

	* server.c (check_pam_password): set PAM_RHOST to remote host ip.

2005-10-11  Derek Price  <derek@ximbiot.com>

	* client.h (SEND_BUILD_DIRS, SEND_FORCE, SEND_NO_CONTENTS,
	BACKUP_MODIFIED_FILES): Tidy.

2005-10-04  Derek Price  <derek@ximbiot.com>

	* sanity.sh (diff_u_test, diff_recursive_test): New functions.
	(directory_cmp): Use GNU diff -ur when possible.
	(find_tool): Catch stderr output from tests.  Count MARGINAL test
	results and prefer tools with more PASSes.
	(*): Replace use of cmp to $diff_u where possbile.

2005-10-04  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (watch6-0): Avoid use of GNU grep -qE extensions for
	anchored search.

2005-10-04  Derek Price  <derek@ximbiot.com>

	* sanity.sh (find_tool): Accept tool name for error messages.  Change
	all callers.

	* run.c: Assume unistd.h.

2005-10-03  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio-6): Use diff -u instead of cmp so that errors
	show up in the automated nightly testing emails.
